--- a/public/assets/scss/_global.scss
+++ b/public/assets/scss/_global.scss
@@ -31,7 +31,7 @@ body {
         background-image: url('../../assets/images/background/bg-element.jpg');
     }
     &.home-2 {
-        background-image: url('../../assets/images/background/bg-element-2.jpg');
+        background-image: url('../../assets/images/background/bg-2.png');
     }
     &.home-3 {
         background-image: url('../../assets/images/background/bg-element-3.jpg');
