--- a/public/assets/scss/_global.scss
+++ b/public/assets/scss/_global.scss
@@ -308,9 +308,10 @@ a {
   width: 100%;
   margin: 10px 0;
 }
-
-.partners {
-  h2 {
-    text-align: center;
+@media screen and (min-width: 768px) {
+  .swiper .box-partner {
+    img {
+      margin-left: 15px;
+    }
   }
 }
